add update files

--- a/recipeOfTheMonth.html
+++ b/recipeOfTheMonth.html
@@ -43,10 +43,19 @@
                 <figcaption>Tacos</figcaption>
             </figure>
             
+            <ul>
+                <h3>Time</h3>
+                <li>
+                    Prep Time: 20 minutes
+                </li>
+                <li>
+                    Cook Time: 45 minutes
+                </li>
+            </ul>
 
             <ul>
-                <h2>Ingredients</h2>
-                <li>1 lb. 90% to 93% lean ground beef</li>
+                <h3>Ingredients</h3>
+                <li>1 lb. 70% to 80% lean ground beef</li>
                 <li>1 Tablespoon chili powder</li>
                 <li>1 teaspoon ground cumin</li>
                 <li>3/4 teaspoon salt</li>
@@ -56,6 +65,25 @@
                 <li>1/2 cup tomato sauce</li>
                 <li>1/4 cup water</li>
                 <li>12 taco shells - either hard shells or small 6-inch soft flour tortillas will work</li>
+            </ul>
+
+            <ul>
+                <h3>Instructions</h3>
+                <li>
+                    <p><span>Step 1:</span> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione et sit qui voluptate cum earum quae temporibus, error obcaecati. Nisi odio quia, accusantium in unde laborum ex. Voluptas, hic quidem?</p>
+                </li>
+                <li>
+                    <p><span>Step 2:</span> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione et sit qui voluptate cum earum quae temporibus, error obcaecati.</p>
+                </li>
+                <li>
+                    <p><span>Step 3:</span> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </li>
+                <li>
+                    <p><span>Step 4:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam velit inventore facilis dolorum qui, eligendi ea laudantium delectus eos facere.</p>
+                </li>
+                <li>
+                    <p><span>Step 5:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, delectus?</p>
+                </li>
             </ul>
         </div>
 
