--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="item">
                 <img src="Images/Tacos.webp" alt="Tacos">
                 <div class="item-text">
-                    <p>Mexican</p>
+                    <p>&#10024;RECIPE OF THE MONTH&#10024;</p>
                     <p>Taco</p>
                 </div>
             </div>
