--- a/index.html
+++ b/index.html
@@ -37,63 +37,80 @@
     <main>
         <div id="grid-container">
             <div class="item">
-                <img src="Images/Tacos.webp" alt="Tacos">
+                <a href="recipeOfTheMonth.html">
+                    <img src="Images/Tacos.webp" alt="Tacos">
+                </a>
                 <div class="item-text">
                     <p>&#10024;RECIPE OF THE MONTH&#10024;</p>
                     <p>Taco</p>
                 </div>
             </div>
             <div class="item">
-                <img src="Images/PepperoniPizza.avif" alt="Pepperoni Pizza">
+                <a href="#">
+                    <img src="Images/PepperoniPizza.avif" alt="Pepperoni Pizza">
+                </a>
                 <div class="item-text">
                     <p>Pizza</p>
                     <p>Pepperoni</p>
                 </div>
             </div>
             <div class="item">
-                <img src="Images/Tiramisu.jpg" alt="Tiramisu">
+                <a href="#">
+                    <img src="Images/Tiramisu.jpg" alt="Tiramisu">
+                </a>
                 <div class="item-text">
                     <p>Dessert</p>
                     <p>Tiramisu</p>
                 </div>
             </div>
             <div class="item">
-                <img src="Images/Burger.jpg" alt="Burger">
+                <a href="#">
+                    <img src="Images/Burger.jpg" alt="Burger">
+                </a>
                 <div class="item-text">
                     <p>Fast Food</p>
                     <p>Burger</p>
                 </div>
             </div>
             <div class="item">
-                <img src="Images/Ribeye.avif" alt="Ribeye Steak">
+                <a href="#">
+                    <img src="Images/Ribeye.avif" alt="Ribeye Steak">
+                </a>
                 <div class="item-text">
                     <p>Dinner</p>
                     <p>Ribeye Steak</p>
                 </div>
             </div>
             <div class="item">
-                <img src="Images/EggToast.avif" alt="Egg Toast">
+                <a href="#">
+                    <img src="Images/EggToast.avif" alt="Egg Toast">
+                </a>
                 <div class="item-text">
                     <p>Breakfast</p>
                     <p>Egg Toast</p>
                 </div>
             </div>
             <div class="item">
-                <img src="Images/Donuts.webp" alt="Donuts">
+                <a href="#">
+                    <img src="Images/Donuts.webp" alt="Donuts">
+                </a>
                 <div class="item-text">
                     <p>Dessert</p>
                     <p>Donuts</p>
                 </div>
             </div>
             <div class="item">
-                <img src="Images/FishSalad.webp" alt="Fish Salad">
+                <a href="#">
+                    <img src="Images/FishSalad.webp" alt="Fish Salad">
+                </a>
                 <div class="item-text">
                     <p>Lunch</p>
                     <p>Fish Salad</p>
                 </div>
             </div>
             <div class="item">
-                <img src="Images/Pasta.webp" alt="Pasta">
+                <a href="#"><img src="Images/Pasta.webp" alt="Pasta"></a>
+                
                 <div class="item-text">
                     <p>Italian</p>
                     <p>Pasta</p>
