--- a/recipeOfTheMonth.html
+++ b/recipeOfTheMonth.html
@@ -36,7 +36,7 @@
 
     <main>
         <div id="recipe">
-            <h1>Recipe Of The Month</h1>
+            <h1>&#10024;Recipe Of The Month&#10024;</h1>
 
             <figure>
                 <img src="Images/Tacos.webp" alt="Tacos">
