--- a/recipeOfTheMonth.html
+++ b/recipeOfTheMonth.html
@@ -92,7 +92,7 @@
 
     <footer>
         <div class="footer-links">
-            <a href="#">About</a>
+            <a href="about.html">About</a>
             <a href="#">Recipes</a>
             <a href="#">FAQ</a>
             <a href="https://codefactory.wien/en/contact-en/">Contact us</a>
