--- a/about.html
+++ b/about.html
@@ -38,13 +38,24 @@
         <div id="about-section">
 
             <div class="about-container">
-                <img src="Images/PastaTomatoSpoon.jpg" alt="Pasta Tomato and Spoon">
-                <div class = "about-heading">
+                <div class="img-container">
+                    <img src="Images/PastaTomatoSpoon.jpg" alt="Pasta Tomato and Spoon">
+                </div>
+                <div class="about-heading">
                     <h1>About</h1>
-                    <p>Food makes us happy! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio tempore necessitatibus laborum dignissimos temporibus. Soluta dolore, sit obcaecati laudantium sunt voluptatibus dignissimos suscipit, hic a amet cupiditate ipsum officiis. Nesciunt nam, similique temporibus consequatur at illum ipsa ad perferendis voluptas non itaque qui sequi, neque accusamus fuga hic! Inventore laudantium doloremque neque maxime repellendus omnis, accusamus optio, minus perspiciatis molestiae earum mollitia fuga, commodi sint quidem saepe? Dicta, fugit esse! Corporis, quod! Neque libero aliquam voluptates dolorem harum maiores labore, quo vitae animi perferendis facere ex voluptate autem veniam id? Placeat enim earum ipsam doloribus culpa tempore numquam, rem impedit!. Neque libero aliquam voluptates dolorem harum maiores labore, quo vitae animi perferendis facere ex voluptate autem veniam id? Placeat enim earum ipsam doloribus culpa tempore numquam, rem impedit!</p>
+                    <p>Food makes us happy! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio tempore
+                        necessitatibus laborum dignissimos temporibus. Soluta dolore, sit obcaecati laudantium sunt
+                        voluptatibus dignissimos suscipit, hic a amet cupiditate ipsum officiis. Nesciunt nam, similique
+                        temporibus consequatur at illum ipsa ad perferendis voluptas non itaque qui sequi, neque
+                        accusamus fuga hic! Inventore laudantium doloremque neque maxime repellendus omnis, accusamus
+                        optio, minus perspiciatis molestiae earum mollitia fuga, commodi sint quidem saepe? Dicta, fugit
+                        esse! Corporis, quod! Neque libero aliquam voluptates dolorem harum maiores labore, quo vitae
+                        animi perferendis facere ex voluptate autem veniam id? Placeat enim earum ipsam doloribus culpa
+                        tempore numquam, rem impedit!. Neque libero aliquam voluptates dolorem harum maiores labore, quo
+                        vitae animi perferendis facere ex voluptate autem veniam id? Placeat enim earum ipsam doloribus
+                        culpa tempore numquam, rem impedit!</p>
                 </div>
             </div>
-            <p>Food makes us happy! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio tempore necessitatibus laborum dignissimos temporibus. Soluta dolore, sit obcaecati laudantium sunt voluptatibus dignissimos suscipit, hic a amet cupiditate ipsum officiis. Nesciunt nam, similique temporibus consequatur at illum ipsa ad perferendis voluptas non itaque qui sequi, neque accusamus fuga hic! Inventore laudantium doloremque neque maxime repellendus omnis, accusamus optio, minus perspiciatis molestiae earum mollitia fuga, commodi sint quidem saepe? Dicta, fugit esse! Corporis, quod! Neque libero aliquam voluptates dolorem harum maiores labore, quo vitae animi perferendis facere ex voluptate autem veniam id? Placeat enim earum ipsam doloribus culpa tempore numquam, rem impedit!. Neque libero aliquam voluptates dolorem harum maiores labore, quo vitae animi perferendis facere ex voluptate autem veniam id? Placeat enim earum ipsam doloribus culpa tempore numquam, rem impedit!</p>
         </div>
     </main>
 
